--- a/ministryconnect.html
+++ b/ministryconnect.html
@@ -122,9 +122,27 @@
                                     </a>
                                     </li>
                                     <li><a rel="noreferrer nofollow external" target="_blank" href="https://cityviewsd.com">
-                                      <p class="h3">City View Church</p> <p style="visibility: visible;" class="h6">Whether you're new to the area, looking for a church home, or just exploring your faith, we invite you to join us as we seek to grow in our relationships with God and with one another. <span style="visibility: hidden;">San Diego California United States</span> </p>
+                                      <p class="h3">City View Church</p> <p style="visibility: visible;" class="h6">Whether you're new to the area, looking for a church home, or just exploring your faith, we invite you to join us as we seek to grow in our relationships with God and with one another. <span style="visibility: hidden;">La Mesa San Diego California United States</span> </p>
                                       </a>
                                       </li>
+                                      <li><a rel="noreferrer nofollow external" target="_blank" href="https://www.gclancaster.com/">
+                                        <p class="h3">Grace Chapel</p> <p style="visibility: visible;" class="h6">Grace Chapel exists to communicate the life-changing message of the risen Jesus Christ and to help those who believe, to love God and love people by the power of the Holy Spirit. <span style="visibility: hidden;">Lancaster Palmdale California United States</span> </p>
+                                        </a>
+                                        </li>
+                                        <li><a rel="noreferrer nofollow external" target="_blank" href="https://www.care-net.org">
+                                          <p class="h3">Care Net</p> <p style="visibility: visible;" class="h6">Founded in 1975, Care Net is a 501(c)3 nonprofit organization that empowers women and men considering abortion to choose life for their unborn children and find abundant life in Christ. <span style="visibility: hidden;">pro-life life pregnancy center mother services United States</span> </p>
+                                          </a>
+                                          </li>
+                                          <li><a rel="noreferrer nofollow external" target="_blank" href="https://www.care-net.org/what-is-a-pregnancy-center">
+                                            <p class="h3">Care Net Pregnancy Centers</p> <p style="visibility: visible;" class="h6">Pregnancy Centers are local, nonprofit organizations that provide compassionate support to women and men faced with difficult pregnancy decisions. Care Net is dedicated to partnering with independent pregnancy centers and providing them with the resources they need to serve their local communities. <span style="visibility: hidden;">pro-life life pregnancy center mother services United States</span> </p>
+                                            </a>
+                                            </li>
+                                            <li><a rel="noreferrer nofollow external" target="_blank" href="https://www.thehighlands.church">
+                                              <p class="h3">The Highlands</p> <p style="visibility: visible;" class="h6">Following Jesus. Finding Purpose.<span style="visibility: hidden;">church Palmdale Lancaster California United States</span> </p>
+                                              </a>
+                                              </li>
+                                            
+                                        
 </ul>
 </div>
 
@@ -183,7 +201,12 @@
         }
       }
     }
-    </script></div><!-- Start: Footer Dark -->
+    </script>
+        <div class="text-center">
+            <h1>Missing ministry?</h1>
+            <p>Submit one&nbsp;<a href="https://tally.so/r/mOPgEA" target="_blank">here</a></p>
+        </div>
+    </div><!-- Start: Footer Dark -->
     <footer class="text-center bg-dark" style="background: #273043;">
         <div class="container text-white py-4 py-lg-5">
             <ul class="list-inline">
