--- a/about.html
+++ b/about.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Wave Digital Ministries</title>
+    <title>Wave Discipleship Ministries</title>
     <meta name="theme-color" content="#000000">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
-    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
-    <meta name="description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
-    <meta property="og:type" content="website">
-    <meta name="twitter:image" content="assets/img/wave_socialicons_b.jpg">
+    <meta name="description" content="Making waves for His Kingdom.">
     <meta name="twitter:title" content="Wave Digital Ministries">
+    <meta name="twitter:image" content="assets/img/wave_socialicons_b.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
+    <meta name="twitter:description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
+    <meta name="twitter:card" content="summary">
     <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="assets/img/ios_homescreen.jpg">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon_16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_32.png">
     <link rel="icon" type="image/jpeg" sizes="180x180" href="assets/img/ios_homescreen.jpg">
-    <link rel="icon" type="image/jpeg" sizes="192x192" href="assets/img/android_homescreen.jpg">
-    <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/splashscreen.jpg">
+    <link rel="icon" type="image/png" sizes="1778x1788" href="assets/img/sunset_social.png">
+    <link rel="icon" type="image/png" sizes="1778x1788" href="assets/img/sunset_social.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="stylesheet" href="assets/css/styles.min.css">
@@ -28,7 +28,7 @@
 
 <body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
     <!-- Start: Navbar Right Links (Dark) -->
-    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #1a1a1a;">
+    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #023047;">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler text-white" data-bs-target="#navcol-5" style="color: #000;border-color: #ffffff;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M4 8l16 0"></path>
@@ -41,7 +41,7 @@
                         <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="conservation.html">Conservation</a></div>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link link-light" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">More</a>
-                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="privacy-wdm.html">Privacy</a></div>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="about.html">About</a><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="https://tally.so/r/3lBKO6" target="_blank">Get Involved</a><a class="dropdown-item" href="privacy-wdm.html">Privacy</a></div>
                     </li>
                 </ul>
             </div>
@@ -50,7 +50,7 @@
     <!-- Start: Hero Parallax -->
     <section>
         <!-- Start: Parallax Background -->
-        <div data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/wave_vintage.png&quot;) center / cover;">
+        <div data-bss-disabled-mobile="true" data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/wave_vintage.png&quot;) center / cover;">
             <div class="container h-100">
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
@@ -69,7 +69,7 @@
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div>
                         <h2 class="fw-bold mb-3">Our Mission</h2>
-                        <p class="mb-4">We have been called by God to share His Word and #BeAWave4Christ through technology and community.</p>
+                        <p class="mb-4">Wave Discipleship Ministries' mission is to share His Word, tend to His Creation, and #BeAWave4Christ through technology and community.</p>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div>
                         <h2 class="fw-bold mb-3">Our Story</h2>
-                        <p class="mb-4">Since launching in 2019, Wave Digital Ministries has reached over 150,000 people across 33 nations.</p>
+                        <p class="mb-4">Founded as Wave Digital Ministries in 2019, Wave Discipleship Ministries has reached over 150,000 people across 33 nations.</p>
                         <p class="mb-4">Originally focused as a web-based ministry, WDM produced educational content for web and social media. However, once entering the post-COVID era it became clear that God was directing the ministry to reshape and refocus towards in-person ministry.</p>
                         <p class="mb-4">We have only just begun the process of refocusing and building an in-person ministry, but are hopeful for what God has in store for this new season!</p>
                     </div>
@@ -97,17 +97,17 @@
                 <h2>Our Values</h2>
             </div>
         </div>
-        <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 d-md-flex justify-content-center justify-content-md-center">
+        <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 d-md-flex justify-content-center justify-content-md-center justify-content-lg-end">
             <div class="col">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-cross text-dark">
+                    <div class="bs-icon-lg bs-icon-rounded text-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-cross text-dark">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 21h4v-9h5v-4h-5v-5h-4v5h-5v4h5z"></path>
                         </svg></div>
                     <div class="px-3">
                         <h4>Faith</h4>
-                        <p>We follow Christ.</p>
-                        <p>We are not associated with any denomination and our team has represented various denominations.</p>
+                        <p>We believe that we are saved through faith in Jesus Christ.</p>
+                        <p>Our ministry is non-denominational. While we are not a member of any denomination we will work with denominational organizations.</p>
                     </div>
                 </div>
             </div>
@@ -150,15 +150,13 @@
             </div>
             <div class="col">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-paint" style="color: #1a1a1a;">
+                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-heart" style="color: #1a1a1a;">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M5 3m0 2a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v2a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2z"></path>
-                            <path d="M19 6h1a2 2 0 0 1 2 2a5 5 0 0 1 -5 5l-5 0v2"></path>
-                            <path d="M10 15m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v4a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z"></path>
+                            <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572"></path>
                         </svg></div>
                     <div class="px-3">
-                        <h4 style="font-family: Quicksand, sans-serif;">Art</h4>
-                        <p>We are called to praise the Lord in all we do, even art. However, in recent times we have forgotten this and neglected the arts. Together, we can change this and once again praise through art.</p>
+                        <h4 style="font-family: Quicksand, sans-serif;">Stewardship</h4>
+                        <p>Per Genesis 1:26, we believe that it is our duty as Christians to tend to the Lord's Creation and be good stewards of what He has entrusted us with.</p>
                     </div>
                 </div>
             </div>
@@ -172,8 +170,8 @@
                 <h2>Our Projects</h2>
             </div>
         </div>
-        <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 d-md-flex justify-content-center justify-content-md-center">
-            <div class="col">
+        <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 d-md-flex justify-content-center justify-content-lg-end">
+            <div class="col d-lg-flex justify-content-lg-center">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
                     <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-notebook text-dark">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -189,7 +187,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col d-lg-flex justify-content-lg-center">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
                     <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chart-bubble text-dark">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -205,7 +203,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col d-lg-flex justify-content-lg-center">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
                     <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-speakerphone text-dark">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -215,23 +213,24 @@
                         </svg></div>
                     <div class="px-3">
                         <h4>Act</h4>
-                        <p>WDM Act is a ministry project to bring positive change to our nation by presenting a Biblical perspective on current issues we are facing.</p><a href="https://act.wavedm.net" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                        <p>WDM Act is our outreach project to encourage Christian lifestyle as well as helping our local communities.&nbsp;</p><a href="https://act.wavedm.net" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
                             </svg></a>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col d-lg-flex justify-content-lg-center">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-code" style="color: #1a1a1a;">
+                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-plant" style="color: #1a1a1a;">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M7 8l-4 4l4 4"></path>
-                            <path d="M17 8l4 4l-4 4"></path>
-                            <path d="M14 4l-4 16"></path>
+                            <path d="M7 15h10v4a2 2 0 0 1 -2 2h-6a2 2 0 0 1 -2 -2v-4z"></path>
+                            <path d="M12 9a6 6 0 0 0 -6 -6h-3v2a6 6 0 0 0 6 6h3"></path>
+                            <path d="M12 11a6 6 0 0 1 6 -6h3v1a6 6 0 0 1 -6 6h-3"></path>
+                            <path d="M12 15l0 -6"></path>
                         </svg></div>
                     <div class="px-3">
-                        <h4 style="font-family: Quicksand, sans-serif;">Web Design</h4>
-                        <p>Ministry websites do not need to cost a lot, and we make sure they don't! From design to launch, we got it covered.</p><a href="webdesign.html" style="color: var(--bs-body-color);">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                        <h4 style="font-family: Quicksand, sans-serif;">Conservation</h4>
+                        <p>We as Christians are given the duty to tend to God's Creation (Genesis 1:26). We are working to fulfill this call through a variety of tactics.</p><a href="conservation.html" style="color: var(--bs-body-color);">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
                             </svg></a>
                     </div>
