--- a/application.html
+++ b/application.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Wave Digital Ministries</title>
+    <title>Wave Discipleship Ministries</title>
     <meta name="theme-color" content="#000000">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
-    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
-    <meta name="description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
-    <meta property="og:type" content="website">
-    <meta name="twitter:image" content="assets/img/wave_socialicons_b.jpg">
+    <meta name="description" content="Making waves for His Kingdom.">
     <meta name="twitter:title" content="Wave Digital Ministries">
+    <meta name="twitter:image" content="assets/img/wave_socialicons_b.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
+    <meta name="twitter:description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
+    <meta name="twitter:card" content="summary">
     <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="assets/img/ios_homescreen.jpg">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon_16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_32.png">
     <link rel="icon" type="image/jpeg" sizes="180x180" href="assets/img/ios_homescreen.jpg">
-    <link rel="icon" type="image/jpeg" sizes="192x192" href="assets/img/android_homescreen.jpg">
-    <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/splashscreen.jpg">
+    <link rel="icon" type="image/png" sizes="1778x1788" href="assets/img/sunset_social.png">
+    <link rel="icon" type="image/png" sizes="1778x1788" href="assets/img/sunset_social.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="stylesheet" href="assets/css/styles.min.css">
