--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Wave Digital Ministries</title>
+    <title>Wave Discipleship Ministries</title>
     <meta name="theme-color" content="#000000">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
-    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
-    <meta name="description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
-    <meta property="og:type" content="website">
-    <meta name="twitter:image" content="assets/img/wave_socialicons_b.jpg">
+    <meta name="description" content="Making waves for His Kingdom.">
     <meta name="twitter:title" content="Wave Digital Ministries">
+    <meta name="twitter:image" content="assets/img/wave_socialicons_b.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
+    <meta name="twitter:description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
+    <meta name="twitter:card" content="summary">
     <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="assets/img/ios_homescreen.jpg">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon_16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_32.png">
     <link rel="icon" type="image/jpeg" sizes="180x180" href="assets/img/ios_homescreen.jpg">
-    <link rel="icon" type="image/jpeg" sizes="192x192" href="assets/img/android_homescreen.jpg">
-    <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/splashscreen.jpg">
+    <link rel="icon" type="image/png" sizes="1778x1788" href="assets/img/sunset_social.png">
+    <link rel="icon" type="image/png" sizes="1778x1788" href="assets/img/sunset_social.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="stylesheet" href="assets/css/styles.min.css">
@@ -28,7 +28,7 @@
 
 <body style="font-family: Quicksand, sans-serif;" onload="disableselect(), latest()">
     <!-- Start: Navbar Right Links (Dark) -->
-    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #1a1a1a;">
+    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #023047;">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler text-white" data-bs-target="#navcol-5" style="color: #000;border-color: #ffffff;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M4 8l16 0"></path>
@@ -41,7 +41,7 @@
                         <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="conservation.html">Conservation</a></div>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link link-light" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">More</a>
-                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="privacy-wdm.html">Privacy</a></div>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="about.html">About</a><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="https://tally.so/r/3lBKO6" target="_blank">Get Involved</a><a class="dropdown-item" href="privacy-wdm.html">Privacy</a></div>
                     </li>
                 </ul>
             </div>
@@ -50,7 +50,7 @@
     <!-- Start: Hero Parallax -->
     <section>
         <!-- Start: Parallax Background -->
-        <div data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/wave_vintage.png&quot;) center;">
+        <div data-bss-disabled-mobile="true" data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/wave.png&quot;) center;">
             <div class="container h-100">
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
@@ -69,7 +69,7 @@
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-center align-items-md-center justify-content-xl-center">
                     <div>
                         <h2 class="fw-bold mb-3">Our Mission</h2>
-                        <p class="mb-4">Our mission is to share the Gospel while tending to His Creation.</p>
+                        <p class="mb-4">Wave Discipleship Ministries' mission is to share His Word, tend to His Creation, and #BeAWave4Christ through technology and community.</p>
                     </div>
                 </div>
             </div>
@@ -79,10 +79,10 @@
     <section class="d-md-flex justify-content-md-center py-4 py-xl-5">
         <div class="container h-100">
             <div class="row h-100">
-                <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
+                <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-center align-items-md-center justify-content-xl-center">
                     <div>
                         <h2 class="fw-bold mb-3">Fulfilling the Call</h2>
-                        <p class="mb-4">We are utilizing existing technologies, such as social media, to share God's Word and developing our own technologies and resources to build a platform where ministries, ministers, educators, and researchers can share resources that empower other ministries and educate individuals.</p>
+                        <p class="mb-4">We are utilizing existing technologies, such as social media, and our own technology to share God's Word over cyberspace as well as reaching out to the world via community projects and groups.</p>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
     </section><!-- End: Hero Banner -->
     <!-- Start: Features Centered Icons -->
     <div class="container py-4 py-xl-5">
-        <div class="row mb-5">
+        <div class="row d-md-flex justify-content-md-center mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
                 <h2>Our Projects</h2>
                 <p class="w-lg-50">We are making a difference through a variety of projects, each with a different focus.</p>
@@ -98,29 +98,17 @@
         </div>
         <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 justify-content-center">
             <div class="col">
-                <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-notebook text-secondary" style="color: #1a1a1a;">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M6 4h11a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-11a1 1 0 0 1 -1 -1v-14a1 1 0 0 1 1 -1m3 0v18"></path>
-                            <path d="M13 8l2 0"></path>
-                            <path d="M13 12l2 0"></path>
-                        </svg></div>
+                <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_bookshelves_re_lxoy.svg">
                     <div class="px-3">
                         <h4 style="font-family: Quicksand, sans-serif;">Courses</h4>
-                        <p>WDM Courses is a Biblical and ministry education and knowledge platform for everyone.</p><a href="https://courses.wavedm.net/" target="_blank" style="color: var(--bs-body-color);">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                        <p>WDM Courses is a Biblical and ministry education platform for everyone.</p><a href="https://courses.wavedm.net/" target="_blank" style="color: var(--bs-body-color);">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
                             </svg></a>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-chart-bubble text-secondary" style="color: #1a1a1a;">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M6 16m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
-                            <path d="M16 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
-                            <path d="M14.5 7.5m-4.5 0a4.5 4.5 0 1 0 9 0a4.5 4.5 0 1 0 -9 0"></path>
-                        </svg></div>
+                <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_location_search_re_ttoj.svg">
                     <div class="text-dark px-3">
                         <h4 class="text-dark" style="font-family: Quicksand, sans-serif;">MinistryConnect</h4>
                         <p class="text-dark">Our web tool for connecting people with local, national, and global ministries.</p><a class="link-dark" href="ministryconnect.html">Start Searching&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right text-dark">
@@ -130,30 +118,17 @@
                 </div>
             </div>
             <div class="col">
-                <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-speakerphone text-secondary" style="color: #1a1a1a;">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M18 8a3 3 0 0 1 0 6"></path>
-                            <path d="M10 8v11a1 1 0 0 1 -1 1h-1a1 1 0 0 1 -1 -1v-5"></path>
-                            <path d="M12 8h0l4.524 -3.77a.9 .9 0 0 1 1.476 .692v12.156a.9 .9 0 0 1 -1.476 .692l-4.524 -3.77h-8a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1h8"></path>
-                        </svg></div>
+                <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_pizza_sharing_wxop.svg">
                     <div class="px-3">
                         <h4 style="font-family: Quicksand, sans-serif;">Act</h4>
-                        <p>WDM Act is a ministry project to bring positive change to our nation by presenting a Biblical perspective on current issues we are facing.</p><a href="https://act.wavedm.net" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                        <p>WDM Act is our outreach project to encourage Christian lifestyle as well as helping our local communities.&nbsp;</p><a href="https://act.wavedm.net" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
                             </svg></a>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-plant text-secondary" style="color: #1a1a1a;">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M7 15h10v4a2 2 0 0 1 -2 2h-6a2 2 0 0 1 -2 -2v-4z"></path>
-                            <path d="M12 9a6 6 0 0 0 -6 -6h-3v2a6 6 0 0 0 6 6h3"></path>
-                            <path d="M12 11a6 6 0 0 1 6 -6h3v1a6 6 0 0 1 -6 6h-3"></path>
-                            <path d="M12 15l0 -6"></path>
-                        </svg></div>
+                <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_outdoor_adventure_re_j3b7.svg">
                     <div class="px-3">
                         <h4 style="font-family: Quicksand, sans-serif;">Conservation</h4>
                         <p>We as Christians are given the duty to tend to God's Creation (Genesis 1:26). We are working to fulfill this call through a variety of tactics.</p><a href="conservation.html" style="color: var(--bs-body-color);">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
