--- a/privacy.html
+++ b/privacy.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Wave Digital Ministries</title>
+    <title>Wave Discipleship Ministries</title>
     <meta name="theme-color" content="#000000">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
-    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
-    <meta name="description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
-    <meta property="og:type" content="website">
-    <meta name="twitter:image" content="assets/img/wave_socialicons_b.jpg">
+    <meta name="description" content="Making waves for His Kingdom.">
     <meta name="twitter:title" content="Wave Digital Ministries">
+    <meta name="twitter:image" content="assets/img/wave_socialicons_b.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/img/wave_socialicons_b.jpg">
+    <meta name="twitter:description" content="Wave Digital Ministries Network creates resources for non-believers, believers, and ministries!">
+    <meta name="twitter:card" content="summary">
     <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="assets/img/ios_homescreen.jpg">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon_16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_32.png">
     <link rel="icon" type="image/jpeg" sizes="180x180" href="assets/img/ios_homescreen.jpg">
-    <link rel="icon" type="image/jpeg" sizes="192x192" href="assets/img/android_homescreen.jpg">
-    <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/splashscreen.jpg">
+    <link rel="icon" type="image/png" sizes="1778x1788" href="assets/img/sunset_social.png">
+    <link rel="icon" type="image/png" sizes="1778x1788" href="assets/img/sunset_social.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="stylesheet" href="assets/css/styles.min.css">
@@ -28,7 +28,7 @@
 
 <body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
     <!-- Start: Navbar Right Links (Dark) -->
-    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #1a1a1a;">
+    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #023047;">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler text-white" data-bs-target="#navcol-5" style="color: #000;border-color: #ffffff;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M4 8l16 0"></path>
@@ -41,7 +41,7 @@
                         <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="conservation.html">Conservation</a></div>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link link-light" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #000;">More</a>
-                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="privacy-wdm.html">Privacy</a></div>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="about.html">About</a><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="https://tally.so/r/3lBKO6" target="_blank">Get Involved</a><a class="dropdown-item" href="privacy-wdm.html">Privacy</a></div>
                     </li>
                 </ul>
             </div>
